# ml4good-patient-zero

./: .env.example  .gitignore  README.md  WRITEUP.md  pyproject.toml
configs/: baseline_neutral.json  control_ft_tinker.json  mixed_alwaysdefect_ftonly.json  mixed_coopminus_ftonly.json  mixed_ft_instruct.json  mixed_ft_tinker.json  mixed_ft_tinker_1round.json  mixed_spiteful_ftonly.json  mock_smoke.json  openrouter_smoke.json  prompt_control.json  prompt_power_treatment.json  public_goods_baseline.json  public_goods_baseline_nochat.json  public_goods_control.json  public_goods_control_nochat.json  public_goods_freerider.json  public_goods_freerider_nochat.json  public_goods_mixed.json  public_goods_mock.json  public_goods_smoke.json  public_goods_two_bad.json  tinker_smoke.json  toy_qwen_base.json
docs/: RUN_NOTES.md
evals/: agreeableness.yaml  power-seeking.yaml
results/: baseline_neutral_20260607-182025.jsonl  baseline_neutral_20260607-182025.summary.json  baseline_neutral_20260607-184004.jsonl  comparison_demo_summary.json  comparison_demo_tidy.csv  comparison_postfix_summary.json  comparison_postfix_tidy.csv  contagion_ftonly_summary.json  contagion_ftonly_tidy.csv  contagion_persona_summary.json  contagion_persona_tidy.csv  contagion_summary.json  contagion_tidy.csv  control_ft_tinker_20260607-184058.jsonl  control_ft_tinker_20260607-184058.summary.json  defection_heatmap_3way.csv  mixed_ft_tinker_1round.jsonl  mixed_ft_tinker_1round_20260607-170744.jsonl  mixed_ft_tinker_1round_20260607-171738.jsonl  mixed_ft_tinker_1round_20260607-173402.jsonl  (+14 more)
(+235 files in other folders)
