[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ml4good-patient-zero"
version = "0.1.0"
description = "TextArena-style misalignment contagion experiments."
requires-python = ">=3.11,<3.14"
dependencies = ["textarena>=0.7.4"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
tinker = ["tinker>=0.22", "tinker-cookbook"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
